--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="main">
+        <div id="calc">
+            <div id="display">
+                1989
+            </div>
+            <div id="buttons">
+                <div class="row">
+                    <button class="button" id="clear">C</button>
+                    <button class="button" id="backspace">DEL</button>
+                    <button class="button" id="divide">/</button>
+                </div>
+                <div class="row">
+                    <button class="button" id="seven">7</button>
+                    <button class="button" id="eight">8</button>
+                    <button class="button" id="nine">9</button>
+                    <button class="button" id="multiply">*</button>
+                </div>
+                <div class="row">
+                    <button class="button" id="four">4</button>
+                    <button class="button" id="five">5</button>
+                    <button class="button" id="six">6</button>
+                    <button class="button" id="subtract">-</button>
+                </div>
+                <div class="row">
+                    <button class="button" id="one">1</button>
+                    <button class="button" id="two">2</button>
+                    <button class="button" id="three">3</button>
+                    <button class="button" id="add">+</button>
+                </div>
+                <div class="row">
+                    <button class="button" id="zero">0</button>
+                    <button class="button" id="equals">=</button>
+                </div>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
