--- a/index.html
+++ b/index.html
@@ -9,36 +9,34 @@
 <body>
     <div id="main">
         <div id="calc">
-            <div id="display">
-                1989
-            </div>
+            <div id="display"></div>
             <div id="buttons">
                 <div class="row">
                     <button class="button" id="clear">C</button>
                     <button class="button" id="backspace">DEL</button>
-                    <button class="button" id="divide">/</button>
+                    <button class="button op" id="divide">/</button>
                 </div>
                 <div class="row">
-                    <button class="button" id="seven">7</button>
-                    <button class="button" id="eight">8</button>
-                    <button class="button" id="nine">9</button>
-                    <button class="button" id="multiply">*</button>
+                    <button class="button number" id="seven">7</button>
+                    <button class="button number" id="eight">8</button>
+                    <button class="button number" id="nine">9</button>
+                    <button class="button op" id="multiply">*</button>
                 </div>
                 <div class="row">
-                    <button class="button" id="four">4</button>
-                    <button class="button" id="five">5</button>
-                    <button class="button" id="six">6</button>
-                    <button class="button" id="subtract">-</button>
+                    <button class="button number" id="four">4</button>
+                    <button class="button number" id="five">5</button>
+                    <button class="button number" id="six">6</button>
+                    <button class="button op" id="subtract">-</button>
                 </div>
                 <div class="row">
-                    <button class="button" id="one">1</button>
-                    <button class="button" id="two">2</button>
-                    <button class="button" id="three">3</button>
+                    <button class="button number" id="one">1</button>
+                    <button class="button number" id="two">2</button>
+                    <button class="button number" id="three">3</button>
                     <button class="button" id="add">+</button>
                 </div>
                 <div class="row">
-                    <button class="button" id="zero">0</button>
-                    <button class="button" id="equals">=</button>
+                    <button class="button number" id="zero">0</button>
+                    <button class="button op" id="equals">=</button>
                 </div>
         </div>
     </div>
