--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                     <button class="button number" id="one">1</button>
                     <button class="button number" id="two">2</button>
                     <button class="button number" id="three">3</button>
-                    <button class="button" id="add">+</button>
+                    <button class="button op" id="add">+</button>
                 </div>
                 <div class="row">
                     <button class="button number" id="zero">0</button>
-                    <button class="button op" id="equals">=</button>
+                    <button class="button" id="equals">=</button>
                 </div>
         </div>
     </div>
